--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "rxjs": "^6.6.7",
+    "symbol-sdk": "^1.0.0",
     "vue": "^3.0.0-0",
     "vue-router": "^4.0.0-0"
   },
