--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-amplify/ui-components": "^1.6.0",
     "@capacitor/core": "2.4.7",
     "@ionic/lab": "^3.2.10",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
+    "aws-amplify": "^4.1.2",
     "core-js": "^3.6.5",
     "rxjs": "^6.6.7",
     "symbol-sdk": "^1.0.0",
