--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "rxjs": "^6.6.7",
     "symbol-sdk": "^1.0.0",
     "vue": "^3.0.0-0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@capacitor/cli": "2.4.7",
