--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@aws-amplify/ui-components": "^1.6.0",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/call-number": "^5.35.0",
+    "@ionic-native/core": "^5.35.0",
     "@ionic/lab": "^3.2.10",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "aws-amplify": "^4.1.2",
+    "call-number": "^1.0.1",
     "core-js": "^3.6.5",
     "rxjs": "^6.6.7",
     "symbol-sdk": "^1.0.0",
