--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-components": "^1.6.0",
+    "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
     "@ionic-native/call-number": "^5.35.0",
     "@ionic-native/core": "^5.35.0",
