--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-components": "^1.6.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@ionic-native/barcode-scanner": "^5.35.0",
     "@ionic-native/call-number": "^5.35.0",
     "@ionic-native/core": "^5.35.0",
     "@ionic/lab": "^3.2.10",
@@ -21,6 +22,7 @@
     "aws-amplify": "^4.1.2",
     "call-number": "^1.0.1",
     "core-js": "^3.6.5",
+    "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "^6.6.7",
     "symbol-sdk": "^1.0.0",
     "vue": "^3.0.0-0",
