--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aws-amplify": "^4.1.2",
     "call-number": "^1.0.1",
     "core-js": "^3.6.5",
+    "nes.css": "^2.3.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
     "rxjs": "^6.6.7",
     "symbol-sdk": "^1.0.0",
