--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@ionic-native/barcode-scanner": "^5.35.0",
     "@ionic-native/call-number": "^5.35.0",
     "@ionic-native/core": "^5.35.0",
+    "@ionic-native/sms": "^5.36.0",
     "@ionic/lab": "^3.2.10",
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "aws-amplify": "^4.1.2",
     "call-number": "^1.0.1",
+    "cordova-sms-plugin": "^1.0.1",
     "core-js": "^3.6.5",
     "nes.css": "^2.3.0",
     "phonegap-plugin-barcodescanner": "^8.1.0",
