--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-amplify/ui-components": "^1.6.0",
     "@capacitor/android": "^2.4.7",
     "@capacitor/core": "2.4.7",
+    "@capacitor/ios": "^2.4.7",
     "@ionic-native/barcode-scanner": "^5.35.0",
     "@ionic-native/call-number": "^5.35.0",
     "@ionic-native/core": "^5.35.0",
